# fast-url

./: README.md  alembic.ini  fast_url.db  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/core/exceptions/: urls.py
app/models/: mixins.py  urls.py
app/models/migrations/: env.py
app/models/migrations/versions/: dc26fbdbd3c8_adding_urls_model.py
app/routers/: urls.py
app/schemas/: urls.py
app/services/: base.py  urls.py
